# nanoGPT-cpp

./: README.ja.md  README.md
cpp/: CMakeLists.txt  README.ja.md  README.md  bpe.h  bpe_test.cpp  export_gpt2.py  export_gpt2_safetensors.py  gpt.h  gpt2.cpp  main.cpp  test_grad.cpp  tokenizer.h
